--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* Branding */
+/* Global variables */
 :root {
   font-family: 'Helvetica';
 
@@ -10,28 +10,41 @@
 
   --clauto-gray: gray;
   --clauto-gray-light: lightgray;
+
+  --navbar-top-height: 50px;
+  --navbar-left-width: 50px;
 }
 
 /* Formatting */
 html, body{
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
-}
-html{
+  width: 100%;
   height: 100%;
 }
-body{
-  height: 100%;
-}
+
 h1 {
   color: var(--clauto-gray);
   margin: 10px;
 }
 
-.page {
-  min-height: 100%;
-  width: 100%;
+.app {
   background-color: var(--clauto-orange-light);
+  min-height: 100%;
+  min-width: 100%;
+}
+
+.page-nonav {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.page-navved {
+  position: absolute;
+  left: 50px;
+  top: 50px;
 }
 
 .panel {
@@ -42,21 +55,11 @@ h1 {
 .hcenter {
   display: flex;
   justify-content: center;
+}
+
+.vcenter {
+  display: flex;
   align-items: center;
-}
-
-.hcentered {
-  margin: auto;
-}
-
-.vcentered {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.squeeze {
-  display: inline-block;
 }
 
 /* UI */
@@ -115,10 +118,4 @@ h1 {
 .button:focus {
   border-color: var(--clauto-gray-light);
   outline: 0px;
-}
-
-/* Temporary style to test with */
-.test {
-  background-color: lightgray;
-  border-color: red;
 }
